@@ -1,3 +1,8 @@
+2012-03-27  Meador Inge  <meadori@codesourcery.com>
+
+	PR c++/52672
+	* g++.dg/cpp0x/constexpr-52672.C: New testcase.
+
 2012-03-27  Mike Stump  <mikestump@comcast.net>
 
 	PR target/52665
