@@ -1,3 +1,9 @@
+2012-03-27  Meador Inge  <meadori@codesourcery.com>
+
+	PR c++/52672
+	* semantics.c (cxx_fold_indirect_ref): Don't attempt to fold
+	stripped child trees that are not pointer types.
+
 2012-03-21  Jason Merrill  <jason@redhat.com>
 
 	Implement return type deduction for normal functions with -std=c++1y.
